# The-Ray-Tracer-Challenge

./: CMakeLists.txt  README.md  main.cpp
exercises/: Cannon.cpp  ClockPixels.cpp  ConsoleCannon.cpp  CoverImage.cpp  FirstCubes.cpp  FirstGroup.cpp  FirstObj.cpp  FirstPattern.cpp  FirstPlane.cpp  FirstReflection.cpp  FirstRefraction.cpp  FirstScene.cpp  FirstShading.cpp  FirstShadow.cpp  FirstTriangles.cpp  MatrixExperiments.cpp  NestedPatternExamples.cpp  RealShadows.cpp
output/: clock.ppm  first_cubes.ppm  first_group.ppm  first_obj.ppm  first_pattern.ppm  first_plane.ppm  first_reflection.ppm  first_refractions.ppm  first_scene.ppm  first_shading.ppm  first_shadow.ppm  first_triangles.ppm  nested_patterns.ppm  real_shadows.ppm  render.ppm
src/camera/: Camera.cpp  Camera.h
src/canvas/: Canvas.cpp  Canvas.h
src/constants/: Constants.h
src/intersections/: Intersection.cpp  Intersection.h
src/lights/: Light.cpp  Light.h
src/lights/point/: PointLight.cpp  PointLight.h
src/materials/: Material.cpp  Material.h
src/matrices/: Matrix.cpp  Matrix.h
src/noise/: PerlinNoise.cpp  PerlinNoise.h
src/parsers/: Parsers.cpp  Parsers.h
src/patterns/: Pattern.cpp  Pattern.h
src/patterns/binary/: BinaryPattern.h
src/patterns/blended/: BlendedPattern.cpp  BlendedPattern.h
src/patterns/checkers/: CheckerPattern.cpp  CheckerPattern.h
src/patterns/gradients/: GradientPattern.cpp  GradientPattern.h  RadialGradientPattern.cpp  RadialGradientPattern.h
src/patterns/perturbed/: PerturbedPattern.cpp  PerturbedPattern.h
src/patterns/rings/: RingPattern.cpp  RingPattern.h
src/patterns/solid/: SolidPattern.cpp  SolidPattern.h
src/patterns/stripes/: StripePattern.cpp  StripePattern.h
src/patterns/test/: TestPattern.cpp  TestPattern.h
src/rays/: Ray.cpp  Ray.h
src/scene/: Scene.h
src/shapes/: Shape.cpp  Shape.h
src/shapes/cones/: Cone.cpp  Cone.h
src/shapes/csg/: CSG.cpp  CSG.h
src/shapes/cubes/: Cube.cpp  Cube.h
src/shapes/cylinders/: Cylinder.cpp  Cylinder.h
src/shapes/groups/: Group.cpp  Group.h
src/shapes/planes/: Plane.cpp  Plane.h
src/shapes/spheres/: Sphere.cpp  Sphere.h
src/shapes/triangles/: SmoothTriangle.cpp  SmoothTriangle.h  Triangle.cpp  Triangle.h
src/spheres/: Sphere.cpp  Sphere.h
src/transformations/: Transformations.cpp  Transformations.h
src/tuples/: Tuple.cpp  Tuple.h
src/world/: World.cpp  World.h
tests/: camera_tests.cpp  canvas_tests.cpp  cones_tests.cpp  csg_tests.cpp  cubes_tests.cpp  cylinders_tests.cpp  groups_tests.cpp  intersections_tests.cpp  lights_tests.cpp  materials_tests.cpp  matrices_tests.cpp  obj_parser_tests.cpp  patterns_tests.cpp  plane_tests.cpp  rays_tests.cpp  smooth_triangles_tests.cpp  spheres_tests.cpp  test.cpp  transformations_tests.cpp  triangles_tests.cpp  tuples_tests.cpp  world_tests.cpp
